# maritime-activity-reports-cdc

./: .gitignore  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  GITHUB_SETUP.md  LICENSE  Makefile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  gcp-deploy.yml  release.yml
airflow_dags/: maritime_reports_cdc_dag.py
config/: config.example.yaml  gcp_config.yaml
deployment/: gcp_deployment_guide.md
docs/: API.md
infrastructure/docker/: Dockerfile.production  startup.sh
infrastructure/terraform/: main.tf  terraform.tfvars.example  variables.tf
scripts/: setup_development.sh  verify_installation.py
scripts/gcp/: dataproc_submit.sh  deploy.sh  run_maritime_cdc_reports.py  setup_dataproc_init.sh
src/maritime_activity_reports/: __init__.py  cli.py
src/maritime_activity_reports/bronze/: __init__.py  cdc_ingestion.py  table_setup.py
src/maritime_activity_reports/gold/: __init__.py  cdf_processor.py  materialized_views.py  streaming_processor.py  table_setup.py
src/maritime_activity_reports/models/: __init__.py  config.py  schemas.py
src/maritime_activity_reports/orchestrator/: __init__.py  cdc_cdf_orchestrator.py
src/maritime_activity_reports/silver/: __init__.py  cdf_processor.py  streaming_processor.py  table_setup.py
src/maritime_activity_reports/tests/: __init__.py  test_bronze_layer.py  test_cli.py  test_gold_layer.py  test_orchestrator.py  test_silver_layer.py
src/maritime_activity_reports/utils/: __init__.py  bigquery.py  data_quality.py  logging.py  spark_utils.py
